force-app/main/default/objects/Spotify_Request_Log__e/Spotify_Request_Log__e.object-meta.xml
<CustomObject>
    <label>Spotify_Request_Log</label>
    <pluralLabel>Spotify_Request_Log</pluralLabel>
</CustomObject>