force-app/main/default/objects/Spotify_Request_Log__e/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>